add current kernel to beta images

--- a/targets-cli-beta.conf
+++ b/targets-cli-beta.conf
@@ -3,9 +3,17 @@ jethubj80                    edge            sid          cli                   
 jethubj80                    edge            bullseye     cli                      beta         yes
 jethubj80                    edge            jammy        cli                      beta         yes
 jethubj80                    edge            focal        cli                      beta         yes
+jethubj80                    current         sid          cli                      beta         yes
+jethubj80                    current         bullseye     cli                      beta         yes
+jethubj80                    current         jammy        cli                      beta         yes
+jethubj80                    current         focal        cli                      beta         yes
 
 # JetHub D1 (j100)
 jethubj100                   edge            sid          cli                      beta         yes
 jethubj100                   edge            bullseye     cli                      beta         yes
 jethubj100                   edge            jammy        cli                      beta         yes
 jethubj100                   edge            focal        cli                      beta         yes
+jethubj100                   current         sid          cli                      beta         yes
+jethubj100                   current         bullseye     cli                      beta         yes
+jethubj100                   current         jammy        cli                      beta         yes
+jethubj100                   current         focal        cli                      beta         yes
