--- a/.github/workflows/build-with-docker.yml
+++ b/.github/workflows/build-with-docker.yml
@@ -296,6 +296,7 @@ jobs:
           ARMBIAN_CACHE_ROOTFS_PATH="${ARMBIAN_CACHE_ROOTFS_PATH}" \
           REPOSITORY_INSTALL="$REPOSITORY_INSTALL" \
           DESKTOP_APPGROUPS_SELECTED="$DESKTOP_APPGROUPS_SELECTED" \
+          COMPRESS_OUTPUTIMAGE="sha,gpg,xz" \
           EXPERT="yes"
 
           sudo chown -R $USER.$USER output/images/$BOARD 2> /dev/null || true
