--- a/.github/workflows/build-with-docker.yml
+++ b/.github/workflows/build-with-docker.yml
@@ -92,8 +92,11 @@ jobs:
           # MATRIX=$(split --number=l/${{ inputs.part }}/${{ inputs.of }} <<<
 
           MATRIX="cat build/config/"${FILENAME}" | grep -v \"^$\" | grep -v \"^#\" | sort | uniq |  ${{ inputs.include }} ${{ inputs.exclude }}  cut -f1 -d ' ' | pr -t -n4 | tr -s '[:blank:]' ':' | cut -d\":\" -f2,3"
+          MATRIXEVAL="$(for x in $(eval $MATRIX); do echo $x; done|jq -cnR '[inputs | select(length>0)]' | jq)"
+          echo ${MATRIXEVAL}
           #[ -s changes ] || unset MATRIX
           #echo ::set-output name=matrix::$(for x in $(eval $MATRIX); do echo $x; done|jq -cnR '[inputs | select(length>0)]' | jq)
+          echo set-output name=matrix::$(for x in $(eval $MATRIX); do echo $x; done|jq -cnR '[inputs | select(length>0)]' | jq)
           echo "matrix=$(for x in $(eval $MATRIX); do echo $x; done|jq -cnR '[inputs | select(length>0)]' | jq)" >> $GITHUB_OUTPUT
 
   image:
