--- a/.github/workflows/build-with-docker-action.yml
+++ b/.github/workflows/build-with-docker-action.yml
@@ -377,7 +377,7 @@ jobs:
           fullslug: "JetHome.${BOARD:6}.Armbian.${CHANNEL}.${RELEASE}.${BRANCH}"
           image_type: "sdcard"
           firmware_file: "build/output/images/${BOARD}/${DEPLOYFOLDER}/Armbian_${VERSION}_${BOARD^}_${RELEASE}_${BRANCH}_${LINUXVER}.img.xz"
-          hash_pgp: "build/output/images/${BOARD}/${DEPLOYFOLDER}/Armbian_${VERSION}_${BOARD^}_${RELEASE}_${BRANCH}_${LINUXVER}.img.xz.asc"
+          hashpgp_file: "build/output/images/${BOARD}/${DEPLOYFOLDER}/Armbian_${VERSION}_${BOARD^}_${RELEASE}_${BRANCH}_${LINUXVER}.img.xz.asc"
           force_overwrite: "true"
           update_latest: "true"
           supported_devices: "${SUPPORTED}"
@@ -390,7 +390,7 @@ jobs:
           fullslug: "JetHome.${BOARD:6}.Armbian.${CHANNEL}.${RELEASE}.${BRANCH}"
           image_type: "burn"
           firmware_file: "tools/output/Armbian_${VERSION}_${BOARD^}_${RELEASE}_${BRANCH}_${LINUXVER}.burn.img.zip"
-          hash_pgp: "tools/output/Armbian_${VERSION}_${BOARD^}_${RELEASE}_${BRANCH}_${LINUXVER}.burn.img.zip.asc"
+          hashpgp_file: "tools/output/Armbian_${VERSION}_${BOARD^}_${RELEASE}_${BRANCH}_${LINUXVER}.burn.img.zip.asc"
           force_overwrite: "true"
           update_latest: "true"
           supported_devices: "${SUPPORTED}"
