--- a/.github/workflows/build-with-docker-action.yml
+++ b/.github/workflows/build-with-docker-action.yml
@@ -92,9 +92,12 @@ jobs:
           # MATRIX=$(split --number=l/${{ inputs.part }}/${{ inputs.of }} <<<
 
           MATRIX="cat build/config/"${FILENAME}" | grep -v \"^$\" | grep -v \"^#\" | sort | uniq |  ${{ inputs.include }} ${{ inputs.exclude }}  cut -f1 -d ' ' | pr -t -n4 | tr -s '[:blank:]' ':' | cut -d\":\" -f2,3"
+          echo Before matrix:${MATRIX} full list:
+          eval "cat build/config/"${FILENAME}" | grep -v \"^$\" | grep -v \"^#\" | sort | uniq |  ${{ inputs.include }} ${{ inputs.exclude }}"
+          echo +------------------------ end fulllist
           #modded MATRIX="cat build/config/"${FILENAME}" | grep -v \"^$\" | grep -v \"^#\" | sort | uniq |  ${{ inputs.include }} ${{ inputs.exclude }}  cut -f1 -d ' ' | pr -t | tr -s '[:blank:]' ':' | cut -d\":\" -f2,3"
           MATRIXEVAL="$(for x in $(eval $MATRIX); do echo $x; done|jq -cnR '[inputs | select(length>0)]' | jq)"
-          echo ${MATRIXEVAL}
+          echo "Matrix eval: ${MATRIXEVAL}"
           #[ -s changes ] || unset MATRIX
           echo ::set-output name=matrix::$(for x in $(eval $MATRIX); do echo $x; done|jq -cnR '[inputs | select(length>0)]' | jq)
           echo set-output name=matrix::$(for x in $(eval $MATRIX); do echo $x; done|jq -cnR '[inputs | select(length>0)]' | jq)
@@ -398,7 +401,7 @@ jobs:
           update_latest: "true"
           supported_devices: "${{ env.SUPPORTED }}"
           FWUPLOAD: ${{ secrets.FWUPLOAD }}
-      
+
       - name: Upload results
         run: |
           echo "Image hash: ${{steps.upload-sdcard.outputs.firmware_hash}}"
