Update build configs

--- a/configs/config-all-new-beta-images.conf
+++ b/configs/config-all-new-beta-images.conf
@@ -1,13 +1,16 @@
+BETA="yes"
 KERNEL_ONLY="no"
 KERNEL_CONFIGURE="no"
 CLEAN_LEVEL="make,oldcache,debs"
 DEST_LANG="en_US.UTF-8"
 KERNEL_KEEP_CONFIG="no"
 EXTERNAL_NEW="prebuild"
+BUILD_ALL="yes"
 USE_TORRENT="yes"
+IGNORE_UPDATES="no"
+#REPOSITORY_INSTALL="u-boot,kernel,armbian-config,armbian-firmware"
+IGNORE_HASH="yes"
 MULTITHREAD="0"
 EXPERT="yes"
-IGNORE_HASH="yes"
-BUILD_ALL="yes"
-BETA="yes"
 SKIP_BOOTSPLASH="yes"
+BUILD_KSRC="yes"
