--- a/configs/config-all-new-images.conf
+++ b/configs/config-all-new-images.conf
@@ -1,12 +1,16 @@
+
+BETA="no"
 KERNEL_ONLY="no"
 KERNEL_CONFIGURE="no"
 CLEAN_LEVEL="make,oldcache,debs"
 DEST_LANG="en_US.UTF-8"
 KERNEL_KEEP_CONFIG="no"
 EXTERNAL_NEW="prebuild"
+BUILD_ALL="yes"
 USE_TORRENT="yes"
+BUILD_KSRC="yes"
+IGNORE_UPDATES="yes"
 MULTITHREAD="0"
 EXPERT="yes"
 IGNORE_HASH="yes"
-BUILD_ALL="yes"
 SKIP_BOOTSPLASH="yes"
