--- a/configs/lib.config
+++ b/configs/lib.config
@@ -1,1 +1,7 @@
 COMPRESS_OUTPUTIMAGE="sha,gpg,xz"
+PRIVATE_CCACHE="yes"
+FAST_CREATE_IMAGE="yes"
+#NO_APT_CACHER="yes"
+#FORCE_USE_RAMDISK="yes"
+#NO_HOST_RELEASE_CHECK="yes"
+USE_MAINLINE_GOOGLE_MIRROR="yes"
